# EchoRoots

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/architecture/: contract_basics.md  semantics.mmd
docs/decisions/: ADR-0001-core-storage-and-data-model-foundation.md.md
docs/playbooks/: naming_cheatsheet.md
duckdb/init/: 00_init.sql
neo4j/init/: 00_init.cypher
qdrant/: collections.md
src/echo_roots/cli/: spec.md
src/echo_roots/governance/: g_events.md
src/echo_roots/models/: __init__.py  base.py  data.md  data.py  enums.py  llm_io.md  llm_io.py  llm_io_examples.py  taxonomy.md  taxonomy.py
src/echo_roots/storage/: duckdb.md  neo4j.md  qdrant.md
src/echo_roots/workflows/: w1_init.md  w2_backfill.md  w3_ingest.md  w4_propose.md  w5_maintain.md  w6_semantic.md
src/echo_roots/workflows/contracts/: common.py  w1_contracts.py  w2_contracts.py  w3_contracts.py  w4_contracts.py  w5_contracts.py  w6_contracts.py
tests/fixtures/: test_connections.py
tests/scenarios/: README.md
