[project]
name = "echoroots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=0.9.0",
    "neo4j>=5.0.0", 
    "qdrant-client>=1.6.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "opencc-python-reimplemented>=0.1.7",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
